tests/conformance/syntax/positive/arrow_right_assoc_valid.ditt
module Syntax.ArrowRightAssoc where

postulate A : Cat
postulate B : Cat
postulate C : Cat
k : A -> B -> C = \x. x
