tests/conformance/syntax/negative/arrow_right_assoc_invalid.ditt
module Syntax.ArrowRightAssocBad where

postulate A : Cat
postulate B : Cat
k : A -> -> B = \x. x
